--- a/src/demos/1-mxgraph.html
+++ b/src/demos/1-mxgraph.html
@@ -118,7 +118,7 @@
           const height = img.offsetHeight
           const geometry = new mxGeometry(x - (width >>> 1), y - (height >>> 1), width, height)
           const cell = new mxCell(img.dataset.label, geometry, `shape=image;image=${img.src};imageBorder=#ccc;dashed=1;verticalLabelPosition=bottom;verticalAlign=top;spacingTop=10;edgeStyle=myEdgeStyle;`)
-          cell.data = img.dataset
+          cell.data = JSON.stringify(img.dataset)
           cell.setVertex(true)
           graph.addCell(cell, graph.getDefaultParent())
           // 或者 graph.importCells([cell], 0, 0, graph.getDefaultParent())
@@ -218,7 +218,6 @@
         const codec = new mxCodec()
         const root = codec.encode(graph.getModel()).children[0]
         const xmlStr = mxUtils.getXml(root)
-
         localStorage.setItem('graph', xmlStr)
       }
       graph.addListener(mxEvent.CELLS_ADDED, storageGraph)
